<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#FFCCCC"
    tools:context=".DrawingActivity" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center" 
        android:orientation="horizontal" >
        <ImageButton 
            android:id="@+id/button_newdrawing"
            android:contentDescription="@string/newdrawing"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/icon_newdrawing"  />
        <ImageButton 
            android:id="@+id/button_draw"
            android:contentDescription="@string/draw"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/icon_brush"  />
        <ImageButton 
            android:id="@+id/button_erase"
            android:contentDescription="@string/erase"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/icon_eraser"  />
        <ImageButton 
            android:id="@+id/button_save"
            android:contentDescription="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/icon_save"  />
        <ImageButton 
            android:id="@+id/button_check"
            android:contentDescription="@string/check"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/icon_check"
            android:onClick="saveAndCheck"  />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/colors"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center" 
        android:orientation="horizontal">
        
        <ImageButton 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="#000000"
            android:contentDescription="@string/paint"
            android:tag="#000000"
            android:src="@drawable/color_border"
            android:onClick = "colorSelected" />
        <ImageButton 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="#0000FF"
            android:contentDescription="@string/paint"
            android:tag="#0000FF"
            android:src="@drawable/color_border"
            android:onClick = "colorSelected" />
        <ImageButton 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="#008000"
            android:contentDescription="@string/paint"
            android:tag="#008000"
            android:src="@drawable/color_border"
            android:onClick = "colorSelected" />
        <ImageButton 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="#FF0000"
            android:contentDescription="@string/paint"
            android:tag="#FF0000"
            android:src="@drawable/color_border"
            android:onClick = "colorSelected" />
        <ImageButton 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="#FFFF00"
            android:contentDescription="@string/paint"
            android:tag="#FFFF00" 
            android:src="@drawable/color_border"
            android:onClick = "colorSelected"/>
    </LinearLayout>
    
    <com.maxcampolo.fingerpaint.DrawingView 
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_weight="1"
        android:background="#FFFFFF" />

</LinearLayout>
